tests/fixtures/invalid/pow_set_int_bytes.py
# Cannot call pow() with Set[int], Int, Bytes
x = pow({1, 2, 3}, 1, b"hello")
